Bug 382397 - G'MIC ignores local selections
Summary: G'MIC ignores local selections
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-16 11:05 UTC by Nicholas LaPointe
Modified: 2018-11-20 08:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas LaPointe 2017-07-16 11:05:11 UTC
When trying to apply a G'MIC filter to a selection, only the global selection has any effect.
Comment 1 joupent 2018-10-12 15:48:08 UTC
Git commit e35700e68fb8ab458d1d4055ce85f0422e6a88f6 by Jouni Pentikäinen.
Committed on 12/10/2018 at 15:47.
Pushed by jounip into branch 'master'.

Fix GMic filters ignoring local selections

M  +5    -1    plugins/extensions/qmic/kis_import_qmic_processing_visitor.cpp

https://commits.kde.org/krita/e35700e68fb8ab458d1d4055ce85f0422e6a88f6
Comment 2 Halla Rempt 2018-11-20 08:58:22 UTC
Git commit 9af77713c58fec6e756961cf9c10ce4fc9349d8d by Boudewijn Rempt, on behalf of Jouni Pentikäinen.
Committed on 20/11/2018 at 08:21.
Pushed by rempt into branch 'krita/4.1'.

Fix GMic filters ignoring local selections

M  +5    -1    plugins/extensions/qmic/kis_import_qmic_processing_visitor.cpp

https://commits.kde.org/krita/9af77713c58fec6e756961cf9c10ce4fc9349d8d