Fix GMic filters ignoring local selections

BUG: 382397